dist/LineScript-win64-20260616/tests/cases/compile_fail/format_block_bad_end_type.lsc
main() -> i64 do
  formatOutput(123) do
    print("x")
  end
  return 0
end
